Eigenen, zentrierten Spinner ergänzt Konkrete Konfig Datei excluded und Sample Config eingefügt

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,2 +1,5 @@
+//Hier können Overrides vollzogen werden, z. B.:
+//$primary: #8e00ca;
+
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "../node_modules/bootstrap-vue/src/index";
