--- a/src/style.scss
+++ b/src/style.scss
@@ -2,7 +2,7 @@
 
 @function set-navbar-color($color) {
   @if (lightness($color) > 50) {
-    @return #1b1b1b; // Lighter backgorund, return dark color
+    @return #1b1b1b; // Lighter background, return dark color
   } @else {
     @return #dcdcdc; // Darker background, return light color
   }
